--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Etch-a-Sketch</title>
-    <link rel="stylesheet" href="./assets/style.css">
-</head>
-<body>
-    
-</body>
-<script src="./assets/main.js"></script>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Etch-a-Sketch</title>
+		<link rel="stylesheet" href="./assets/style.css" />
+	</head>
+	<body>
+		<main class="main">
+			<div class="grid-container"></div>
+		</main>
+	</body>
+	<script src="./assets/main.js"></script>
 </html>
