--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <label for="color-picker">Pick a color</label>
                 <input type="color" name="color-picker" id="color-picker" class="color-picker">
             </div>
-            <button class="btn clear-btn">Clear Grid</button>
+            <button class="btn clear-grid-btn">Clear Grid</button>
             <button class="btn erase-btn">Eraser</button>
             <button class="btn change-grid-size-btn">Change Grid Size</button>
 			<div class="grid-container"></div>
