eraser function and pen mode. Mild cleanup for DRY

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
                 <input type="color" name="color-picker" id="color-picker" class="color-picker">
             </div>
             <button class="btn clear-grid-btn">Clear Grid</button>
-            <button class="btn erase-btn">Eraser</button>
+            <button class="btn erase-btn">Eraser Mode</button>
+            <button class="btn pen-btn">Pen Mode</button>
             <button class="btn change-grid-size-btn">Change Grid Size</button>
 			<div class="grid-container"></div>
 		</main>
