opacity mode btn

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <button class="btn erase-btn">Eraser Mode</button>
             <button class="btn pen-btn">Pen Mode</button>
             <button class="btn change-grid-size-btn">Change Grid Size</button>
+			<button class="btn opacity-mode-btn">Opacity Mode</button>
 			<div class="grid-container"></div>
+
 		</main>
 	</body>
 	<script src="./assets/main.js"></script>
