--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <button class="btn pen-btn">Pen Mode</button>
             <button class="btn change-grid-size-btn">Change Grid Size</button>
 			<button class="btn rainbow-mode-btn">Rainbow Mode</button>
+			<button class="btn opacity-mode-btn">Opacity Mode</button>
 			<div class="grid-container"></div>
 
 		</main>
