--- a/index.html
+++ b/index.html
@@ -7,19 +7,31 @@
 		<link rel="stylesheet" href="./assets/style.css" />
 	</head>
 	<body>
+		<div class="headings">
+			<h1 class="heading">Etch Your Sketch</h1>
+			<h3 class="subheading">Pick a color, grab the pen tool and start etching!</h3>
+		</div>
 		<main class="main">
-            <div class="input-wrapper">
-                <label for="color-picker">Pick a color</label>
-                <input type="color" name="color-picker" id="color-picker" class="color-picker">
-            </div>
-            <button class="btn clear-grid-btn">Clear Grid</button>
-            <button class="btn erase-btn">Eraser Mode</button>
-            <button class="btn pen-btn">Pen Mode</button>
-            <button class="btn change-grid-size-btn">Change Grid Size</button>
-			<button class="btn rainbow-mode-btn">Rainbow Mode</button>
-			<button class="btn opacity-mode-btn">Opacity Mode</button>
+			<div class="buttons-and-picker">
+				<div class="input-wrapper">
+					<label for="color-picker">Pick a color</label>
+					<input
+						type="color"
+						name="color-picker"
+						id="color-picker"
+						class="color-picker"
+					/>
+				</div>
+				<button class="btn pen-btn transitions">Pen Mode</button>
+				<button class="btn erase-btn transitions">Eraser Mode</button>
+				<button class="btn rainbow-mode-btn transitions">Rainbow Mode</button>
+				<button class="btn opacity-mode-btn transitions">Opacity Mode</button>
+				<button class="btn change-grid-size-btn transitions">
+					Change Grid Size
+				</button>
+		<button class="btn clear-grid-btn">Clear Grid</button>
+			</div>
 			<div class="grid-container"></div>
-
 		</main>
 	</body>
 	<script src="./assets/main.js"></script>
